vlib/v/checker/tests/c_style_variadic_fn_missing_fixed_args_err.vv
fn hello(i int, f f64, ...) {
	_ = i
	_ = f
}

fn main() {
	hello(1)
}
